--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,29 @@
+body {
+	margin: 0;
+	padding: 0;
+}
+
 #root {
-	border: solid;
+	//background-color: blue;
+
+	$margin: 1rem;
+	margin: $margin;
+	min-height: calc(100vh - #{$margin * 2});
+
+	display: flex;
+	flex-direction: column;
+
+	header {
+		//background-color: yellow;
+	}
+
+	main {
+		//background-color: cyan;
+
+		flex: 1;
+	}
+
+	footer {
+		//background-color: red;
+	}
 }
