--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,33 +1,31 @@
-body {
+%reset-spacing {
 	margin: 0;
 	padding: 0;
+}
+
+body {
+	@extend %reset-spacing;
 
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
 		Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
 		"Segoe UI Symbol";
 }
 
-#root {
-	//background-color: blue;
+h1 {
+	@extend %reset-spacing;
+}
 
-	$margin: 1rem;
-	margin: $margin;
-	min-height: calc(100vh - #{$margin * 2});
+#root {
+	min-height: 100vh;
 
 	display: flex;
 	flex-direction: column;
 
-	header {
-		//background-color: yellow;
+	> * {
+		padding: 1rem;
 	}
 
 	main {
-		//background-color: cyan;
-
 		flex: 1;
-	}
-
-	footer {
-		//background-color: red;
 	}
 }
