--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,6 +15,10 @@ h1 {
 	@extend %reset-spacing;
 }
 
+h2 {
+	margin-top: 0;
+}
+
 #root {
 	min-height: 100vh;
 
@@ -27,5 +31,19 @@ h1 {
 
 	main {
 		flex: 1;
+	}
+}
+
+.dog {
+	width: 4rem;
+	height: 4rem;
+	background-color: black;
+	border-radius: 1rem;
+	overflow: hidden;
+
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
 	}
 }
