--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -34,16 +34,4 @@ h2 {
 	}
 }
 
-.dog {
-	width: 4rem;
-	height: 4rem;
-	background-color: black;
-	border-radius: 1rem;
-	overflow: hidden;
-
-	img {
-		width: 100%;
-		height: 100%;
-		object-fit: contain;
-	}
-}
+@import "viewdogs"
