--- a/src/styles/_viewdogs.scss
+++ b/src/styles/_viewdogs.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 .dog-view {
 	position: relative;
 
@@ -15,13 +17,13 @@
 	left: (100% - $width) / 2;
 }
 
-$slide-radius: 18%;
-$wheel-padding: $slide-radius - 8%;
+$_slide-radius: 18%;
+$_wheel-padding: $_slide-radius - 8%;
 
 .wheel-outline {
 	position: absolute;
 
-	$size: 100% - ($wheel-padding * 2);
+	$size: 100% - ($_wheel-padding * 2);
 	$borderSize: 1px;
 
 	$realSize: calc(#{$size} - #{$borderSize * 2});
@@ -29,7 +31,7 @@ $wheel-padding: $slide-radius - 8%;
 	width: $realSize;
 	height: $realSize;
 
-	padding: $wheel-padding;
+	padding: $_wheel-padding;
 
 	background-color: white;
 	border-radius: 100%;
@@ -37,18 +39,38 @@ $wheel-padding: $slide-radius - 8%;
 	border-style: solid;
 }
 
+@mixin _transformSlide($index, $count) {
+	$step: 360deg / $count;
+	$degrees: -$step * ($index);
+
+	$x: (math.cos($degrees) * 50%) + 50%;
+	$y: (math.sin($degrees) * 50%) + 50%;
+
+	left: $x;
+	top:  $y;
+	transform: translate(-50%, -50%) rotate($degrees + 90deg);
+}
+
 .wheel {
 	width: 100%;
 	height: 100%;
 
 	position: relative;
+
+	$slide-count: 14;
+
+	@for $i from 1 through $slide-count {
+		> *:nth-of-type(#{$i}) .wheel-slide {
+			@include _transformSlide($i, $slide-count);
+		}
+	}
 }
 
 .wheel-slide {
 	position: absolute;
 
-	width: $slide-radius;
-	height: $slide-radius;
+	width: $_slide-radius;
+	height: $_slide-radius;
 
 	background-color: black;
 	border-radius: 25%;
@@ -61,20 +83,20 @@ $wheel-padding: $slide-radius - 8%;
 	}
 
 	&:hover {
-		width: $slide-radius + 2%;
-		height: $slide-radius + 2%;
+		width: $_slide-radius + 2%;
+		height: $_slide-radius + 2%;
 	}
 }
 
-$view-box-height: 60%;
+$_view-box-height: 60%;
 
 .view-box {
 	$borderWidth: 0.75rem;
 
 	position: absolute;
 	width: calc(100% - #{$borderWidth * 2});
-	height: calc(#{$view-box-height} - #{$borderWidth * 2});
-	top: 100% - $view-box-height;
+	height: calc(#{$_view-box-height} - #{$borderWidth * 2});
+	top: 100% - $_view-box-height;
 
 	background-color: blue;
 	border-color: blue;
@@ -93,7 +115,7 @@ $view-box-height: 60%;
 
 	position: absolute;
 	right: 0;
-	top: 100% - $view-box-height - $size;
+	top: 100% - $_view-box-height - $size;
 
 	background-color: orange;
 	border-color: orange;
