--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,9 +6,17 @@
 body {
 	@extend %reset-spacing;
 
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-		Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-		"Segoe UI Symbol";
+	font-family:
+		-apple-system,
+		BlinkMacSystemFont,
+		'Segoe UI',
+		Roboto,
+		Helvetica,
+		Arial,
+		sans-serif,
+		'Apple Color Emoji',
+		'Segoe UI Emoji',
+		'Segoe UI Symbol';
 }
 
 h1 {
@@ -19,7 +27,15 @@ h2 {
 	margin-top: 0;
 }
 
-#root {
+a {
+	text-decoration: none;
+
+	&:hover {
+		text-decoration: underline;
+	}
+}
+
+.root {
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
@@ -38,6 +54,6 @@ h2 {
 	}
 }
 
-.homeLink {
+.home-link {
 	margin-top: 2rem;
 }
