Image slide background

--- a/src/styles/marspics.module.scss
+++ b/src/styles/marspics.module.scss
@@ -34,6 +34,8 @@ $_animation-time: 0.25s;
 	height: 200px;
 	display: inline-block;
 
+	background: #fff;
+
 	border-color: $_darkest-blue;
 	border-radius: 10%;
 	border-width: thin;
